# uoh-ay26-gaphify-obcidian-reverse-engineering

./: .env.example  .gitignore  pyproject.toml  requirements.txt
artifacts/: graph.json  grphify_summary.json
data/upstream_snapshot/: scheduler_bug.py
docs/: PLAN.md  PLAN_PRD.md  PRD.md  TODO.md  WORKLOG.md
fixed/broken-python/: REPAIR_NOTES.md
fixed/broken-python/polygons/: polygons.py
obsidian/: agent-workflow.md  hot.md  index.md
reports/: ASSIGNMENT_COMPLIANCE.md  BROKEN_PYTHON_REPAIR_MATRIX.md  GRAPH_REPORT.md  TOKEN_EFFICIENCY.md
src/gaphify_re/: __init__.py  agent_workflow.py  cli.py  crew_agent.py  domain.py  gemini_agent.py  gemini_artifacts.py  gemini_prompt.py  graph_builder.py  grphify_runner.py  parser.py  scheduler.py  token_meter.py
tests/: test_parser.py  test_token_meter.py  test_upstream_snapshot.py
